Compilation_Racket_Mips/piton/tests/errors/no_body_else.py
if True:
    print_int(1)
else:
print_int(2)
